# biliardo

./: .gitignore  CMakeLists.txt  ForwardDeclaration.h  README.md  ball.cpp  ball.h  biliardo  biliardo.cpp  functionDefinitions.cpp  geometrical_entities.h  geometrical_methods.cpp  geometrical_methods.h  graphic.cpp  graphic.h  line.cpp  line.h  main.cpp  setting.cpp  setting.h  setup.cpp  setup.h  structs.h  system.h  test  test.cpp
